--- a/workshops/workshop.css
+++ b/workshops/workshop.css
@@ -1,4 +1,4 @@
-.workshop {
+/* .workshop {
   width: 75vw;
   border: 3px solid var(--color5);
 
@@ -19,5 +19,5 @@ text-decoration: underline;
 
 .workshop li:hover::after {
   padding-left: 0px 5px;
-  content: 'emoji';
-}
+  content: '❌';
+} */
